force-app/main/default/objects/OrgHealthCheckpointConfig__mdt/OrgHealthCheckpointConfig__mdt.object-meta.xml
<CustomObject>
    <label>Org Health Checkpoint Config</label>
    <pluralLabel>Org Health Checkpoint Configs</pluralLabel>
    <description>Registry of every individual health check within each module. Label = display name. Deploy a new record to register a new checkpoint without touching any Apex module class.</description>
</CustomObject>