force-app/main/default/objects/OrgHealthCheckpointConfig__mdt/fields/CheckpointKey__c.field-meta.xml
<CustomField>
    <fullName>CheckpointKey__c</fullName>
    <label>Checkpoint Key</label>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
    <unique>true</unique>
    <description>Dot-separated identifier: Module.CheckName (e.g. Security.ModifyAllData). Must match the key used in OrgHealthConstants.isCheckpointEnabled().</description>
</CustomField>