force-app/main/default/objects/OrgHealthCheckpointConfig__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>LongTextArea</type>
    <length>1000</length>
    <description>Short description of what this checkpoint checks. Displayed in the config screen.</description>
</CustomField>