force-app/main/default/objects/OrgHealthCheckpointConfig__mdt/fields/IsEnabledByDefault__c.field-meta.xml
<CustomField>
    <fullName>IsEnabledByDefault__c</fullName>
    <label>Is Enabled By Default</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Default enabled state. Overridden at runtime by OrgHealthConfigOverride__c records created via the config screen.</description>
</CustomField>