force-app/main/default/objects/OrgHealthCheckpointConfig__mdt/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <label>Module</label>
    <type>Text</type>
    <length>50</length>
    <required>true</required>
    <description>Parent module key — must match a value in OrgHealthConstants.MODULE_CHAIN.</description>
</CustomField>